--- a/日本/留学diy/【】大学优先级.md
+++ b/日本/留学diy/【】大学优先级.md
@@ -3,31 +3,35 @@
 
 
 
-| 优先级 |       大学        |     地区及交通      |      优势      |               劣势               |            关键字            |
-| :----: | :---------------: | :-----------------: | :------------: | :------------------------------: | :--------------------------: |
-|   1    |  **XX东京大学**   |          /          |       /        | 难度大大大、不收预科生、要直接考 |   放弃了，入学考试难度爆炸   |
-|   2    |   **👌京都大学**   |          /          |       /        |                                  |     软件工程、计算机视觉     |
-|   3    |   **👌大阪大学**   |          /          |       /        |                                  |  软件工程、软件设计很有意思  |
-|   4    |   **👌神户大学**   |       还凑合        |                |                                  |   田村直之+几个智能的老师    |
-|   5    |   **👌筑波大学**   |        乡村         | 省钱、录取率高 |               乡村               |          老师太多了          |
-|   6    | **👌东京工业大学** |       在东京        |    地理位置    |           没有软件工程           | 到时候看哪个教授爱收中国人吧 |
-|   7    |  **名古屋大学**   |        偏僻         |   其实挺好的   |                                  |       备选（因为位置）       |
-|        |    早稻田大学     |                     |                |                                  |                              |
-|        |   ==庆应-软工==   |                     |                |                                  |                              |
-|        |     二流私立      |                     |                |                                  |                              |
-|        |     明治大学      |     200万+考试      |                |                                  |                              |
-|        |   青山学院大学    |   书类+笔试+面试s   |                |                                  |                              |
-|        |     立教大学      | 只有AI+入试只有春季 |                |                                  |                              |
-|        |     中央大学      |        笔试         |                |                                  |                              |
-|        |     法政大学      |   找不到啊找不到    |                |                                  |                              |
-|        |     関西大学      |     -不太对口啊     |                |                                  |                              |
-|        |   关西学院大学    |     -不太对口啊     |                |                                  |                              |
-|        |    同志社大学     |                     |                |                                  |                              |
-|        |    立命馆大学     |    **已发邮件**     |                |                                  |                              |
-|        |     一桥大学      |       --没有        |                |                                  |                              |
-|        |                   |                     |                |                                  |                              |
-|        |     上智大学      |  有软工--是助教！   |                |                                  |                              |
-|        |                   |                     |                |                                  |                              |
+| 优先级 |                       大学                        |                          地区及交通                          | 优势 |               劣势               |          关键字          |
+| :----: | :-----------------------------------------------: | :----------------------------------------------------------: | :--: | :------------------------------: | :----------------------: |
+|   1    |                  **XX东京大学**                   |                              /                               |  /   | 难度大大大、不收预科生、要直接考 | 放弃了，入学考试难度爆炸 |
+|   2    |                   **👌京都大学**                   |                              /                               |  /   |                                  |           社情           |
+|   3    |                   **👌大阪大学**                   |                              /                               |  /   |                                  |          楠本👋           |
+|   4    |                   **👌神户大学**                   |                                                              |      |                                  |            XX            |
+|   5    |                   **👌筑波大学**                   |                                                              |      |                                  |            XX            |
+|   6    |                 **👌东京工业大学**                 |                                                              |      |                                  |            xx            |
+|   7    |                  **名古屋大学**                   |                                                              |      |                                  |            xx            |
+|  ---   |                       ----                        |                            -----                             | ---  |               ---                |           ---            |
+|        |                    早稻田大学                     |                   挂了的话继续找教授问问……                   |      |                                  |                          |
+|        |                   ==庆应-软工==                   |                            ⭐️⭐️⭐️⭐️⭐️                             |      |                                  |                          |
+|  ---   |                       ----                        |                            -----                             | ---  |               ---                |           ---            |
+|        |                     明治大学                      | ❌只有International Program in Architecture and Urban Design  \| have related Computer？ |      |                                  |                          |
+|        | [青山学院大学](http://www.agnes.aoyama.ac.jp/en/) |                    ❌为什么也是没了，问下                     |      |                                  |                          |
+|        |                     立教大学                      |                ❌只到19年就截止了？  问下吧？                 |      |                                  |                          |
+|        |                     中央大学                      |                              ❌                               |      |                                  |                          |
+|        |                     法政大学                      |                              有                              |      |                                  |                          |
+|  ---   |                       ----                        |                            -----                             | ---  |               ---                |           ---            |
+|        |                     関西大学                      |                                                              |      |                                  |                          |
+|        |                   关西学院大学                    |                                                              |      |                                  |                          |
+|        |                    同志社大学                     |                              有                              |      |                                  |                          |
+|        |                    立命馆大学                     |     ⭐️⭐️⭐️⭐️丸山老师真的不戳，去关西感受关西人民滴热情也不戳     |      |                                  |                          |
+|  ---   |                       ----                        |                            -----                             | ---  |               ---                |           ---            |
+|        |                     上智大学                      | ⭐️⭐️⭐️准教授，6月更新列表，4月入学只有phd，而且川端亮好像没辅导资格⑧ |      |                                  |                          |
+|        |  [芝浦工业大学](https://igp.shibaura-it.ac.jp/)   |                                                              |      |                                  |                          |
+|        |                                                   |                                                              |      |                                  |                          |
+|        |                                                   |                                                              |      |                                  |                          |
+|        |                                                   |                                                              |      |                                  |                          |
 
 
 -----
