--- a/日本/留学diy/ソフトウェア工学/【法政软工-要要项】.md
+++ b/日本/留学diy/ソフトウェア工学/【法政软工-要要项】.md
@@ -1,5 +1,15 @@
 
 
+
+
+
+
+https://iist.hosei.ac.jp/   英语的理工
+
+https://iist.hosei.ac.jp/admission/  Admission界面
+
+----
+
 - https://www.hosei.ac.jp/english/admissions/graduate/jbdp/information_science/?auth=9abbb458a78210eb174f4bdd385bcf54
 - https://iist.hosei.ac.jp/ 首页
 
