--- a/日本/留学diy/ソフトウェア工学/【关西大学-有英语项目-再确认下】.md
+++ b/日本/留学diy/ソフトウェア工学/【关西大学-有英语项目-再确认下】.md
@@ -1,3 +1,11 @@
+https://www.kansai-u.ac.jp/Gr_sch/english/eng/index.html  英语项目
+
+ 
+
+
+
+
+
 
 
 - https://www.kansai-u.ac.jp/Fc_inf/fm/staff/tsuji.html
