--- a/计算机科学/找工作/算法题/算法模板.md
+++ b/计算机科学/找工作/算法题/算法模板.md
@@ -95,7 +95,8 @@ Well worth reading:
               
               if( map.containsKey(c) ){
                   map.put(c, map.get(c)-1);// plus or minus one
-                  if(map.get(c) == 0) counter--;//modify the counter according the requirement(different condition).
+                  if(map.get(c) == 0) 
+                    counter--;//modify the counter according the requirement(different condition).
               }
               end++;
               
