--- a/计算机科学/找工作/BQ问题/面試問答準備心得之考前猜題.md
+++ b/计算机科学/找工作/BQ问题/面試問答準備心得之考前猜題.md
@@ -28,7 +28,7 @@
 
 之前看過一篇文章寫說面試在回答問題時，其實就跟說故事一樣，你要說得完整、說人引人入勝，說得越好，表現得就越好。仔細想一想發現滿有道理的。
 
-大家應該有聽過 STAR 法則，是由下面四個單字開頭組合而成的：
+大家應該有聽過 **STAR** 法則，是由下面四個單字開頭組合而成的：
 
 1. 情境(Situation)
 2. 任務(Task)
@@ -48,12 +48,37 @@
 以我這次跟以往的經歷來說，有幾題出現的機率超級高，我把它歸類在必問問題。
 
 1. 可以做個簡單的自我介紹嗎？
+
+      ```
+      ```
+
+      ```
+      
+      ```
+
 2. 可以講一下你現在在做什麼嗎？（針對在職找工作的人）
+
 3. 可以講一下你上一份工作在做些什麼嗎？（針對離職後找工作的人）
+
 4. 上一份為什麼想要離職？
+
+      ```
+      ```
+
+      ```
+      
+      ```
+
 5. 為什麼想加入我們公司？（或者是：為什麼對這個職位有興趣？）
 
-這類問題其實不用花太多時間準備，因為跟自身相關的問題，一定是最熟悉的。總不可能叫你自我介紹，然後你想個三十分鐘還想不出來吧？
+      ```
+      ```
+
+      ```
+      
+      ```
+
+這類問題其實不用花太多時間準備，因為跟**自身相關的問題，一定是最熟悉的**。總不可能叫你自我介紹，然後你想個三十分鐘還想不出來吧？
 
 這類問題相對親切，而且一定會一直一直一直被問到，但只要花點時間準備一下就好。
 
@@ -89,12 +114,33 @@
 以我自己來說，我那時候準備了下面這些問題：
 
 1. 為什麼休學
+
 2. 為什麼不念資工系
+
 3. 為什麼念哲學
+
 4. 在哲學系你學到什麼
+
 5. 你最驕傲的成就是什麼
+
 6. 你的優點是什麼
+
+
+   ```
+   ```
+
+   ```
+   
+   ```
+
 7. 你的缺點是什麼
+
+   ```
+   ```
+
+   ```
+   
+   ```
 8. 你怎麼持續讓自己獲得科技相關的新知
 
 跟自己相關的問題其實也滿好答的，準備方式就跟之前說的一樣，自己擬一個答案之後試圖回答，邊回答邊記錄自己卡住的地方，查查看有什麼單字可以用。回答個幾次之後就會熟悉這個答案了，講得會順很多。
@@ -112,60 +158,293 @@
 ## 目標相關：如何設定、如何完成、達成與沒達成的經驗
 
 1. Give an example of how you set goals.
+
+   ```
+   ```
+
+   ```
+   
+   ```
+
 2. Give an example of a goal you reached and tell me how you achieved it.
+
+   ```
+   ```
+
+   ```
+   
+   ```
+
+
+
 
 ## 壓力相關：如何跟壓力共處？在壓力之下如何有效率工作？
 
 1. Tell me about how you worked effectively under pressure.
+
+   ```
+   ```
+
+   ```
+   
+   ```
+
+
+
+
 2. How did you handle meeting a tight deadline?
+
+
+   ```
+   ```
+
+   ```
+   
+   ```
+
+
 3. Tell me about a time you were under a lot of pressure. What was going on, and how did you get through it?
+
+   ```
+   ```
+
+   ```
+   
+   ```
+
 
 ## 失敗、犯錯類
 
 1. Tell me about a time you failed. How did you deal with the situation?
+
+   ```
+   ```
+
+   ```
+   
+   ```
+
+
+
 2. Have you ever made a mistake? How did you handle it?
+
+   ```
+   ```
+
+   ```
+   
+   ```
+
 
 ## 挑戰類
 
 1. Describe a complex situation you encountered and how you solved it
+
+   ```
+   ```
+
+   ```
+   
+   ```
+
+
+
 2. Have you handled a difficult situation? How?
+
+   ```
+   ```
+
+   ```
+   
+   ```
+
+
 3. How do you handle a challenge? Give an example.
+
+   ```
+   ```
+
+   ```
+   
+   ```
+
+
 4. Tell me the most difficult issue you encountered
+
+   ```
+   ```
+
+   ```
+   
+   ```
+
+
 
 ## 做決定類：你如何做決定？怎麼搜集資訊？
 
 1. Did you ever make a risky decision? Why? How did you handle it?
+
+   ```
+   ```
+
+   ```
+   
+   ```
 2. Did you ever postpone making a decision? Why?
+
+   ```
+   ```
+
+   ```
+   
+   ```
 3. Describe a decision you made that wasn’t popular and how you handled implementing it.
+
+   ```
+   ```
+
+   ```
+   
+   ```
 4. Tell me about a difficult decision you’ve madein the last year.
+
+   ```
+   ```
+
+   ```
+   
+   ```
 5. Do you always make decisions on your own without the help of others?
 
+   ```
+   ```
+
+   ```
+   
+   ```
 ## 團隊合作類：如何團隊合作
 
 1. Give an example of how you worked on a team.
+
+   ```
+   ```
+
+   ```
+   
+   ```
 2. Share an example of how you were able to motivate employees or co-workers.
+
+   ```
+   ```
+
+   ```
+   
+   ```
 
 ## 溝通類
 
 1. What do you do if you disagree with someone at work?
+
+   ```
+   ```
+
+   ```
+   
+   ```
 2. What do you do if you disagree with your boss?
+
+   ```
+   ```
+
+   ```
+   
+   ```
 3. Do you listen? Give an example of when you did or when you didn’t listen.
+
+   ```
+   ```
+
+   ```
+   
+   ```
 4. If there is a disagreement at work, how do you solve the conflict?
+
+   ```
+   ```
+
+   ```
+   
+   ```
 5. Describe a situation in which you were able to use persuasion to successfully convince someone to see things your way.
+
+   ```
+   ```
+
+   ```
+   
+   ```
 6. Can you give me an example when you handled some conflict in work environment? What is your typical way of dealing with conflicts?
+
+   ```
+   ```
+
+   ```
+   
+   ```
 
 ## 工作排程類：如何處理工作上的優先程度？
 
 1. When you worked on multiple projects how did you prioritize?
+
+   ```
+   ```
+
+   ```
+   
+   ```
 2. How do you prioritise projects & tasks when scheduling your time? Give me two examples.
+
+   ```
+   ```
+
+   ```
+   
+   ```
 
 ## 主動類：你有多積極？
 
 1. Give me an example of when you showed initiative and took the lead.
+
+   ```
+   ```
+
+   ```
+   
+   ```
 2. Describe a time when you anticipated potential problems and developed preventive measures
+
+   ```
+   ```
+
+   ```
+   
+   ```
 3. Can you tell me a time when took the initiative at improving processes at your work?
+
+   ```
+   ```
+
+   ```
+   
+   ```
 4. Have you gone above and beyond the call of duty? If so, how?
 
+   ```
+   ```
+
+   ```
+   
+   ```
 每一類的題目我都準備了一到兩個小故事，以我自身的例子來回答那些問題。舉例來說，在回答溝通類的問題時，我會舉一個我跟設計師溝通的例子。
 
 S: 跟設計師討論 UI 怎麼改，例如說這個 button 會不會太暗
