--- a/语言学/日语/活用/词类活用总结.md
+++ b/语言学/日语/活用/词类活用总结.md
@@ -1216,7 +1216,7 @@ c，理所当然的道理。
 
 ## 动词十三种变形一览表
 
-![动词变形一览表](http://r.photo.store.qq.com/psb?/V14L47VC0w3vOf/tfIjgX1I*Ur1JBef.co*g9eCaFTh5fPQLCuwNnHuimE!/r/dL8AAAAAAAAA)
+![动词变形一览表](https://tva1.sinaimg.cn/large/e6c9d24egy1h3zr86p6voj21dw0mctf1.jpg)
 
 
 
