--- a/语言学/日语/N5-N4口语.md
+++ b/语言学/日语/N5-N4口语.md
@@ -1,6 +1,10 @@
 https://www.youtube.com/watch?v=w7QzsUVVtHM
 
 
+
+### N5
+
+
 ```java
 1. はじめまして、ゆまです。（初次見面，我是Yuma） 
 2. 出身は　どちらですか。(你是哪裏人）
@@ -106,7 +110,7 @@ https://www.youtube.com/watch?v=w7QzsUVVtHM
 
 
 
-
+### N5
 
 1. はじめまして、ゆまです。（初次見面，我是Yuma） 
 2. 出身は　どちらですか。(你是哪裏人）
@@ -211,9 +215,414 @@ https://www.youtube.com/watch?v=w7QzsUVVtHM
 
 
 
+### N5
+
+1. はじめまして、ゆまです。
+   1. （初次見面，我是Yuma） 
+   2. 
+
+2. 出身は　どちらですか。
+   1. (你是哪裏人）
+   1. 
+
+3. どうぞ　よろしく　おねがいします。
+   1. (請多多指教)
+   1. 
+
+4. 「いま　なんじ　ですか？」「午前９時４０分です。」
+   1. (現在幾點 早上9點40分）
+   1. 
+
+5. りんごを　三つ　ください。
+   1. （給我三個蘋果)
+   1. 
+
+6. 試験は　１２月６日　日よう日です。
+   1. （考試是12月6號星期日)
+   1. 
+
+7. わたしの　祖母は　今年で　１００歳です。
+   1. （我的祖母今年100歲)
+   1. 
+
+8. その　しんごうを　左に　まがって　ください。
+   1. （請在那個交通燈往左轉)
+   1. 
+
+9. 沖縄は　南にあるので　とてもあたたかいです。
+   1. （因為沖繩位於南部 氣候非常溫暖)
+   1. 
+
+10. リュウくんの　あたまは　すこし　大きいです。
+    1. （Ryu的頭 有點大)
+    1. 
+
+11. この時計は　とても　たかいです。
+    1. （這個表 非常貴)
+    1. 
+
+12. つめたい　飲みものは　ありますか。
+    1. （請問有沒有冷飲？)
+    1. 
+
+13. わたしは　納豆が　すきじゃありません。
+    1. （我不喜歡納豆)
+    1. 
+
+14. リュウさんは　日本に　すんでいます。
+    1. （Ryu住在日本）
+    1. 
+
+15. 母は　がっこうで　はたらいています。
+    1. （我媽在學校工作）
+    1. 
+
+16. 父は　日本のトヨタに　つとめています。
+    1. （我爸在日本的豐田上班）
+    1. 
+
+17. どうぞ、このタオルを　つかってください。
+    1. （請使用這條毛巾）
+    1. 
+
+18. 私の姉は　まいあさ　シャワーをあびます。
+    1. （我的姊姊每天早上洗澡）
+    1. 
+
+19. にもつは　ここに　おいてくださいね。
+    1. （請把包裹放在這裡）
+    1. 
+
+20. うちから学校まで　１時間　かかります。
+    1. （從我家到學校花費一個小時）
+    1. 
+
+21. あついですね、エアコンを　つけましょう。
+    1. （好熱啊，開冷氣吧）
+    1. 
+
+22. 電気を　けしてください。
+    1. （請把燈給關了）
+    1. 
+
+23. コンビニは　２４時間　あいています。
+    1. （便利商店24小時開著）
+    1. 
+
+24. 鬼滅の刃のえいがは　もう　見ました。
+    1. （鬼滅之刃的電影 我已經看了 ）
+    1. 
+
+25. えんりょしないで、もっと　食べてください。
+    1. （不要客氣 請多吃點）
+    1. 
+
+26. しゅくだいは　だいたい　おわりました。
+    1. （功課我大概寫完了）
+    1. 
+
+27. ちょっと　まって！
+    1. （等一下！）
+    1. 
+
+28. リュウくんの　おくさんは　きれいですね。
+    1. （ryu的老婆好美呀）
+    1. 
+
+29. ごじゅじんは　おいくつですか。
+    1. （您的丈夫多少歲數？）
+    1. 
+
+30. むすめや　むすこの　子どもは　まごです。
+    1. （女兒和兒子的孩子叫孫子）
+    1. 
+
+31. リュウさんは　かっこいいですか、かっこよくないですか。
+    1. （ryu是帥還是不帥啊）
+    1. 
+
+32. わたしは　英語が　あまり　じょうずじゃありません。
+    1. （我的英文不太好）
+    1. 
+
+33. ゆまさんは　きのう　パーティーに　来(こ)なかったです。
+    1. （yuma昨天沒來派對）
+    1. 
+
+34. これは　日本語の教科書です。
+    1. （這是日文的教科書）
+    1. 
+
+35. 赤いくつした、かわいいですね。
+    1. （紅色的襪子 好可愛）
+    1. 
+
+36. 「この人が　ぼくの　妻です。」「へぇ〜、きれいな　人ですね。」
+    1. （這位是我的老婆 天啊好美的人啊）
+    1. 
+
+37. 「このピカチュウのパンツは　リュウくんのですか。」「はい、ぼくのです。。」
+    1. （這個皮卡丘的內褲 是ryu的嗎 沒錯是我的）
+    1. 
+
+38. 車の下に　ねこが　います。
+    1. （在車底下有貓）
+    1. 
+
+39. いすの上に　うさぎのにんぎょうが　あります。
+    1. （在椅子上面有兔子娃娃）
+    1. 
+
+40. わたしは　マレーシアから　来ました。
+    1. （我從馬來西亞來的）
+    1. 
+
+41. 日本は　すずしいですが、マレーシアは　あついです。
+    1. （日本很涼快，馬來西亞很熱的）
+    1. 
+
+42. 東京は　おしゃれな店が　たくさんありますね。
+    1. （東京有很多時尚的店）
+    1. 
+
+43. 「クリスマスプレゼント、なにが　いいですか。」「そうですね〜、高級マンションがいいです♡」
+    1. （聖誕節禮物 送什麼好呢？ 嗯.. 我要高級公寓）
+    1. 
+
+44. まいあさ  ７(しち)時に　いえを　出ます。
+    1. （我每天早上7點出門）
+    1. 
+
+45. 「クリスマスは　誰と　すごしますか。」「ひとりで　すごします。。」
+    1. （聖誕節和誰過呀 一個人過）
+    1. 
+
+46. 今から　学校に　行きます。
+    1. （我現在要去學校）
+    1. 
+
+47. 月よう日に　また会いましょう。
+    1. （我們星期日再見）
+    1. 
+
+48. わからないことは　わたしに　聞いてください。
+    1. （有什麼不懂的請問我）
+    1. 
+
+49. 子どもたちが　にわで　遊んでいます。
+    1. （小朋友們在庭園玩耍）
+    1. 
+
+50. 日本語で　話してください。
+    1. （請用日文說）
+    1. 
+
+51. せかいで　いちばん　きみが　きれいだ。
+    1. （這世上你是最美的）
+    1. 
+
+52. わたしも　パクチーが　苦手です。
+    1. （我也不喜歡吃香菜）
+    1. 
+
+53. コーヒーかこうちゃ、どちらがいいですか。
+    1. （咖啡和紅茶你要喝哪個？）
+    1. 
+
+54. 駅前には、コンビニやいざかやなどが　あります。
+    1. （在車站前有超商和居酒屋）
+    1. 
+
+55. 試験は　午前９時から　午後４時までです。
+    1. （考試是從早上9點到下午4點）
+    1. 
+
+56. あしたの　ひるごろ　もう一度　来てください。
+    1. （請你明天的中午左右 再過來）
+    1. 
+
+57. 駅まで　タクシーで　だいたい　1,000円ぐらい　かかります。
+    1. （坐計程車到車站大概花費1000日幣）
+    1. 
+
+58. ぼくと、一日だけ　デートしてください！
+    1. （拜託和我約會一天吧！）
+    1. 
+
+59. 東京駅へは、なにで　行きますか？
+    1. （請問要搭什麼去東京車站？）
+    1. 
+
+60. 今週は　どのくらい　本を　読みましたか。
+    1. （ 這一週你看了幾本書）
+    1. 
+
+61. 「ゆまさんは　いま　おいくつですか。」「１８さいです。」「嘘つけー！」
+    1. （yuma現在幾歲啊18歲 騙人！）
+    1. 
+
+62. すみません、だれかいますか？　…だれも　いませんね。
+    1. （不好意思有人在嗎？）
+    1. 
+
+63. いつか　ヨーロッパに　行きたいです。
+    1. （哪天真想去一趟歐洲呢）
+    1. 
+
+64. このバックは　大きいので、　なんでも　入ります。
+    1. （ 這個包包很大 什麼都能裝進去）
+    1. 
+
+65. 「今日のおひるは　なにが　食べたいですか。」「うーん、わたしは　なんでも　いいですよ。」
+    1. （今天午餐你想吃什麼）
+    1. 
+
+66. 「さいきん　どうですか。」「彼女が　できたので　まいにち　幸せです。」
+    1. （最近怎樣？ 我叫了一位女朋友每天都很幸福）
+    1. 
+
+67. マクドナルドは、やすくて　はやくて　おいしい。
+    1. （麥當勞便宜 快 又好吃）
+    1. 
+
+68. あさ　おきて、あさごはんを　食べて、それから　うんどうをします。
+    1. （それから… 我早上起床 先吃早餐後會運動）
+    1. 
+
+69. はを　みがいてから　ねましょう。
+    1. （先刷了牙 在睡覺吧）
+    1. 
+
+70. かわいい　彼女が　ほしいです。
+    1. （我想要可愛的女朋友）
+    1. 
+
+71. 鬼滅の刃のえいがを　見たいですが、ひとりでは　見たくないです。
+    1. （我想看鬼滅之刃的電影 但是不想一個人看）
+    1. 
+
+72. 兄は　東京の小学校で　英語を　おしえています。
+    1. （我哥在東京的國小教英文）
+    1. 
+
+73. ここで　タバコを　すわないでください。
+    1. （請不要在這裡抽煙）
+    1. 
+
+74. このコップは　たんじょうびに　友だちから　もらいました。
+    1. （這個杯子是我生日的時候朋友給我的）
+    1. 
+
+75. 姉が　ふくを　たくさん　くれました。
+    1. （我姐姐給了我很多衣服）
+    1. 
+
+76. 今年のバレンタインデーは、リュウくんに　クッキーを　あげました。
+    1. （今天的情人節我給了ryu很多餅乾）
+    1. 
+
+77. 時間が　ないので、タクシーで　行きましょう。
+    1. （因為沒時間 我們坐計程車去吧）
+    1. 
+
+78. にもつが　多いですね、てつだいましょうか。
+    1. （你好多包包呀 我來幫你吧）
+    1. 
+
+79. ゆまちゃん、今度の日よう日　ぼくと　デートしませんか。
+    1. （yuma 這個星期日 可以和我約會嗎）
+    1. 
+
+80. あしたは　テストが　あるから、家に　かえって　べんきょうします。
+    1. （明天有考試我要回家學習）
+    1. 
+
+81. 「今日の　テスト、どうでしたか。」「べんきょうしたけど、あまり　できませんでした。」
+    1. （今天的考得怎麼樣 我有學習但還是不太會）
+    1. 
+
+82. 日本語は　むずかしいです。でも、おもしろいです。
+    1. （日文很難 但是很有趣）
+    1. 
+
+83. それじゃ、またね！
+    1. （那 我們再見）
+    2. 
+
+84. 日本語で　自分の意見を　言うのは　たいへんです。
+    1. （要用日文說自己的意見好幸苦）
+    2. 
+
+85. まだ　よるごはんを　食べていません。
+    1. （我還沒吃晚餐）
+    2. 
+
+86. 先生のむすめさん、大きくなりましたね。
+    1. （老師的女兒這麼大了呀）
+    2. 
+
+87. テレビのおとを　小さくしてください。
+    1. （請把電視的聲音調小）
+    2. 
+
+88. わたしは　ひまなとき、ユーチューブを　見ます。
+    1. （我有空的時候 會看youtube）
+    2. 
+
+89. 日本に　来る　前に、　少し　日本語を　べんきょうしました。
+    1. （我來日本之前 學了一點日文）
+    2. 
+
+90. えいがを　見た　あと(で) カラオケに　行きました。
+    1. （我看了電影之後去了卡拉ok）
+    2. 
+
+91. また　あそびに　来て　くださいね。
+    1. （下次請一定要再來玩喔）
+    2. 
+
+92. わたしの姉は　わたしより　せが　低いです。
+    1. （我的姊姊比我還矮小）
+    2. 
+
+93. リュウくんと　ゆまちゃん(と)、どちらのほうが　お酒が　すきですか。
+    1. （ryu 和 yuma 你們誰比較喜歡喝酒）
+    2. 
+
+94. 「日本料理の中で、なにが　いちばん　すきですか。」「大阪のたこやきが　いちばん　すきです。」
+    1. （在日本料理當中最喜歡什麼 我最喜歡大阪的章魚燒）
+    2. 
+
+95. 休みの日は、　うちで　アニメを見たり　ゲームをしたり　します。
+    1. （假日我都在家裡看看動漫 打打遊戲）
+    2. 
+
+96. 日本語を　聞くことは　できますが、　話すことは　できません。
+    1. （日文我會聽 但不會說）
+    2. 
+
+97. 日本人の　名前を　おぼえるのは　むずかしくないです。
+    1. （日本人的名字不會難記）
+    2. 
+
+98. リュウくんは　変顔が　できます。
+    1. （ ryu會做怪臉）
+    2. 
+
+99. わたしは　あまり　英語が　話せません。＝話す ことが できません
+    1. （我不會太說英文）
+    2. 
+
+100. みなさん、あした　朝７時に　来(こ)られますか。＝来る ことが できますか
+     1. （大家 明天的早上7點能來嗎）
+     2. 
+
+
+
+
 ----
 
-
+### N4
 
 ```java
 1. わたしは一週間に３回、日本語の授業を受けます。（我一週有三堂日文課程）
@@ -319,6 +728,10 @@ https://www.youtube.com/watch?v=w7QzsUVVtHM
 
 ```
 
+
+
+### N4
+
 1. わたしは一週間に３回、日本語の授業を受けます。（我一週有三堂日文課程）
 2. 姉は　日本のGoogleにつとめています。（我的姊姊在日本的谷歌上班）
 3. 私は　日本に　１０回も　行ったことがあります。（我去過日本10次了）
@@ -419,6 +832,314 @@ https://www.youtube.com/watch?v=w7QzsUVVtHM
 98. ちょっとコンビニ行ってくるけど、なにか買ってきてほしいものある？（有什麼要我買的嗎)
 99. 「今日元気ないね、どうしたの？」「昨日、彼女にふられたんだ…」（今天看起來沒精神耶 怎麼了嗎 昨天我被女朋友甩了)
 100. 今日のパーティー、ゆまちゃん来るかなあ。（今天的派對 不曉得yuma會來嗎)
+
+
+
+
+
+### N4
+
+1. わたしは一週間に３回、日本語の授業を受けます。
+   1. （我一週有三堂日文課程）
+   2. 
+2. 姉は　日本のGoogleにつとめています。
+   1. （我的姊姊在日本的谷歌上班）
+   2. 
+3. 私は　日本に　１０回も　行ったことがあります。
+   1. （我去過日本10次了）
+   2. 
+4. コンビニで、ビールと梅酒を　２本ずつ買いました。
+   1. （在便利商店 各買了兩瓶啤酒和梅酒）
+   2. 
+5. あの方もきれいですが、あなたほどではありません。
+   1. （那位小姐也是很美啦 但是比不過你）
+   2. 
+6. これは、こどもでもできる問題ですよ。
+   1. （這是連小朋友都能答的問題）
+   2. 
+7. 今回は　仕事で　日本に来ました。
+   1. （這次是因為工作來了日本）
+   2. 
+8. 僕は　かわいい彼女が　10人も　います。
+   1. （我有10個很可愛的女朋友）
+   2. 
+9. リュウさんは　下ネタしか　話せません。
+   1. （ryu只懂得開黃腔）
+   2. 
+10. 先生が　戻ってくるまで　教室にいなければいけません。
+    1. (必須待在教室直到老師回來)
+    2. 
+11. クリスマスまでに　彼女が欲しいです。
+    1. (我在聖誕節前想交到女朋友)
+    2. 
+12. 休みの日は　漫画を読んだり　ゲームをしたり　しています。
+    1. (假日我都看看漫畫 打打遊戲)
+    2. 
+13. 妻は　このごろ　ビールばかり　飲んでいます。
+    1. (我老婆最近光喝酒)
+    2. 
+14. 今、筋トレをしているところです。
+    1. (現在剛好正在健身)
+    2. 
+15. 彼が寝ている間に、浮気をしました。
+    1. (我曾男友在睡覺時 搞外遇了)
+    2. 
+16. これは、去年　日本に行ったときに　買ったものです。
+    1. (這是去年去日本時買的)
+    2. 
+17. 「すみません、今会議中なので　あとでこちらから電話します。」
+    1. (不好意思 我正在開會 等下由我再給您回電)
+    2. 
+18. お金がなくて、買えません。
+    1. (沒錢我買不了)
+    2. 
+19. マスクをしたまま、コーヒーを飲んで　しまいました。
+    1. (我不小心帶著口罩喝了咖啡)
+20. まあまあ、お酒でも　飲みながら　話しましょう。
+    1. (好啦好啦 我們點杯酒 邊喝邊聊吧)
+    2. 
+21. 私は　まだ一度も　日本に　行ったことがありません。
+    1. (我一次也還沒去過日本)
+    2. 
+22. この辺りは　いのししがでることがあるので　気をつけてください。
+    1. （這附近偶爾會出現山豬 請小心)
+    2. 
+23. 私は　毎日　ヤクルトを飲むことにしています。
+    1. （我每天都要喝養樂多)
+    2. 
+24. 今年の日本語能力試験は　中止になりました。
+    1. (今年的日文考試 中止了)
+    2. 
+25. 先輩たちが　卒業して　さびしくなりました。
+    1. (前輩們都畢業了我變得好寂寞)
+    2. 
+26. もう少し　音を　大きくしてください。
+    1. （請把聲音調得再大一點)
+    2. 
+27. そろそろ　新しいパソコンを　買わないといけないなぁ。
+    1. （是時候該買新電腦了)
+    2. 
+28. これ、食べてもいいですか。
+    1. （這我可以吃嗎)
+    2. 
+29. 明日は　特にやることがないので　来なくてもいいですよ。
+    1. (明天也沒有特別的事幹 你可以不用來了)
+    2. 
+30. テスト中は　喋ってはいけません。
+    1. （ 考試期間不可以說話)
+    2. 
+31. N4の試験、受かるといいですね。
+    1. （N4的考試 希望能合格)
+    2. 
+32. テストが始まる前に、筆記用具以外のものを　しまっておいてください。
+    1. （在考試開始前 請把筆記用品以外的東西收起來)
+    2. 
+33. 「あれ？昨日買っておいたビールは？！」「あ、さっき飲んじゃった。。」
+    1. （疑 我昨天買好的啤酒呢 啊 我不小心喝掉了)
+    2. 
+34. 「飲んでみる？」
+    1. （要喝喝看嗎)
+    2. 
+35. 「なるほど！教えてくれてありがとう！」
+    1. （原來如此 謝謝你教我)
+    2. 
+36. 小さいころ、　よく　祖母に　遊んでもらいました。
+    1. （小時候祖母很常跟我玩)
+    2. 
+37. これは、煉獄先生にいただいた本です。
+    1. （這是從煉獄老師哪裏的到的書)
+    2. 
+38. 煉獄先生は　かっこいいし　熱心に　教えてくださるので、人気があります。
+    1. （煉獄老師人又帥 教導也很熱心 所以有人氣)
+    2. 
+39. 日本をもっと知るために　日本に留学しました。
+    1. （為了更了解日本我來留學了)
+    2. 
+40. みんなに聞こえるように、大きい声で話してください。
+    1. （為了讓大家都能聽到 請大聲說)
+    2. 
+41. 日本語が話せるようになってから、学校が楽しくなりました。
+    1. （自從我變得會說日文之後 學校生活變得快樂起來了)
+    2. 
+42. ダイエット中なので、甘いものを食べないようにしています。
+    1. （我正在減肥 所以控制不吃甜食)
+    2. 
+43. 医者に、この薬を　毎日　飲むように言われました。
+    1. （醫生讓我每天都吃這個藥)
+    2. 
+44. 「くそ〜、、あんなにがんばったのに・・・」
+    1. （可惡 我明明那麼努力了)
+    2. 
+45. これは　どういう意味ですか。
+    1. （這是什麼意思啊)
+    2. 
+46. 今日は　早く　寝たほうがいいですよ。
+    1. （今天早點睡比較好)
+    2. 
+47. 上司に　このことは誰にも言うなって言われました。
+    1. （我被上司說 這事不能對任何人說出去)
+    2. 
+48. 肉だけじゃなくて、野菜も食べなさい。
+    1. （不要只吃肉 菜也要吃喔)
+    2. 
+49. 今日は祝日なので、その店が開いているかどうか　わかりません。
+    1. （今天是公共假日 那家店有沒有開我也不知道)
+    2. 
+50. 昨日は飲み会のあと、どうやって帰ってきたか　覚えていません。
+    1. （昨天聚會之後 我是怎麼回來的我沒記得。)
+    2. 
+51. あそこで　魚を売っているの（＝人）が　父です。
+    1. （在那邊賣魚的人就是我父親)
+    2. 
+52. 授業が始まるのは、９時からです。
+    1. （課是從9點開始)
+    2. 
+53. ひらがなを覚えるのに　３ヶ月もかかりました。
+    1. （我花了3個月學會片假名))
+    2. 
+54. この店では　高級料理が食べられます。
+    1. （這個店能吃到高級料理)
+    2. 
+55. 隣の部屋から　変な声が　聞こえます。
+    1. （從隔壁的房間可以聽到奇怪的聲音)
+    2. 
+56. 携帯電話を買ってもらったので、毎日彼女の声が聞けます。
+    1. （買給我手機之後 每天都能聽到女友的聲音)
+    2. 
+57. ここから　富士山が　よく　見えます。
+    1. （從這裡能清楚看見富士山)
+    2. 
+58. うちに来れば、裸で寝ているリュウくんが見られますよ。
+    1. （你來我家就可以看到裸睡的ryu喔)
+    2. 
+59. 昨日リュウさんが、きれいな女の人と歩いているのを見ました。
+    1. （昨天我看到ryu和漂亮的女生一起走路)
+    2. 
+60. 私は歌が下手なので、カラオケにはあまり行きません。
+    1. （我唱歌很爛 不太去卡拉ok)
+    2. 
+61. もう１２月なのに、全然寒くないですね。
+    1. （已經12月了卻一點都沒感覺到冷)
+    2. 
+62. 明日のイベントは　雨でも　やります。
+    1. （明天的活動就算下雨也會辦)
+    2. 
+63. あの人は　いくらあやまっても　許してくれない。
+    1. （那個人你道歉多少次他都不會原諒你的)
+    2. 
+64. あの人を　ゆるすつもりはありません。
+    1. （我沒有要原諒那個人的意思)
+    2. 
+65. リュウさんは日本語がうまい。それに、かっこいい！
+    1. （ ryu的日文很棒！而且還很帥！)
+    2. 
+66. 集合時間はもう過ぎている。ところが、彼はまだ来ていない。
+    1. （集合的時間已經過了 他卻還沒來到)
+    2. 
+67. 頭のよさよりも、愛情の深さのほうが　大事です。
+    1. （比起腦袋好不好，愛你多深才是最重要的)
+    2. 
+68. 東京駅までの行き方を教えてください。
+    1. （請告訴我到東京車站的方法)
+    2. 
+69. すみませんが、もう一度　言っていただけませんか。
+    1. （不要意思可以麻煩你再說一次嗎)
+    2. 
+70. 早く　夏休みに　なってほしい。
+    1. （希望快點進入暑假)
+    2. 
+71. 先生に　スピーチで話す内容を　チェックしていただきたいです。
+    1. （拜託老師幫忙檢查我發表要說的內容)
+    2. 
+72. そんなに彼女が欲しいなら、合コンにでも　行ってみたらどうですか。
+    1. （那麼想要女朋友的話聯誼會那些去參加看看啊)
+    2. 
+73. あの…ちょっと話したいことがあるんだけど…。
+    1. （那個 我有話想跟你說)
+    2. 
+74. ゆまちゃんは、明日は用事があるから行けないと言っていましたよ。
+    1. （yuma她說了明天有事不能去)
+    2. 
+75. 今度の金曜日、みんなで飲みに行こうよ！
+    1. （這週五大家一去喝一杯吧！)
+    2. 
+76. 今日は休みなので、ゆっくりドラマでも見ようと思います。
+    1. （今天是假日所以我想慢慢享受電視劇)
+    2. 
+77. もし暑かったら、エアコンをつけてくださいね。
+    1. （如果覺得熱的話請打開空調)
+    2. 
+78. 「時間やばいな...」「タクシーで行けば、間に合うと思う！」
+    1. （ 時間有點糟糕 坐計程車去的話我覺得來得及！)
+    2. 
+79. 渋谷から原宿に行くなら、山手線が便利です。
+    1. （從涉谷去原宿的話山手線很方便)
+    2. 
+80. あそこを右に曲がって　少し行くと、コンビニがあります。
+    1. （那邊往右拐 在走一下就有便利商店)
+    2. 
+81. このアニメを見たら、もう寝よう。　
+    1. （看完這部動漫就睡覺吧)
+    2. 
+82. 明日は天気が悪いみたいだから　今日洗濯しておいたほうがいいね。
+    1. （聽說明天天氣不好喔，今天把衣服先洗掉比較好)
+    2. 
+83. わ〜！おいしそう！！
+    1. （哇好好吃的樣子)
+    2. 
+84. 今晩、東北地方では雪が降るでしょう。
+    1. （今晚估計東北地區會下雪)
+    2. 
+85. 今行かなかったら、もう一生会えないかもしれない。
+    1. （現在不去的話 恐怕一輩子也見不到了喔)
+    2. 
+86. リュウさんは、かっこよすぎます！
+    1. （ryu桑也太帥了吧！)
+    2. 
+87. 私はとても傷つきやすい性格です。
+    1. （我是很容易受傷的性格)
+    2. 
+88. 僕はストレスがたまりにくい性格です。
+    1. （我是不容易感覺到壓力的性格)
+    2. 
+89. 胃の痛みがおさまるまで、この薬を飲み続けてください。
+    1. （請持續吃這個藥直到胃痛好下來)
+    2. 
+90. 先生に　ほめられました。
+    1. （我被老師稱讚了)
+    2. 
+91. うさぎに薬を飲ませるのは　大変です。
+    1. （要讓兔子吃藥好辛苦)
+    2. 
+92. 入社して一か月で、会社をやめさせられました。
+    1. （我入社一個月就被炒掉了)
+    2. 
+93. そのゲームおもしろそう、私にもやらせて！
+    1. （這個遊戲看起來好有趣 也讓我玩一下！)
+    2. 
+94. ここに車をとめておいても大丈夫ですか。
+    1. （我把車子停在這裡沒問題吧)
+    2. 
+95. 今日は車がたくさんとまっていますね。
+    1. （今天停了好多車在這)
+    2. 
+96. この間の地震で　冷蔵庫がこわれてしまいました。
+    1. （上一次的地震把我的冰箱弄壞了)
+    2. 
+97. 友達のパソコンを　こわしてしまいました。　
+    1. （我把朋友的電腦搞壞了)
+    2. 
+98. ちょっとコンビニ行ってくるけど、なにか買ってきてほしいものある？
+    1. （有什麼要我買的嗎)
+    2. 
+99. 「今日元気ないね、どうしたの？」「昨日、彼女にふられたんだ…」
+    1. （今天看起來沒精神耶 怎麼了嗎 昨天我被女朋友甩了)
+    2. 
+100. 今日のパーティー、ゆまちゃん来るかなあ。
+     1. （今天的派對 不曉得yuma會來嗎)
+     2. 
+
+
 
 
 
